--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -4,14 +4,14 @@
     <!-- BODY BACKGROUND -->
     <div class="w-screen h-full bg-gray-100">
         <!-- OVERALL CONTAINER -->
-        <div class="relative container h-full pt-16 px-5 mx-auto">
+        <div class="container relative h-full px-5 pt-16 mx-auto">
             <div class="mb-12">
-                <h1 class="text-center text-3xl font-bold text-text">Book a flight</h1>
-                <p class="text-center text-lg text-text">We can bring you anywhere!*</p>
-                <p class="text-center text-xs mt-6 text-text">*almost</p>
+                <h1 class="text-3xl font-bold text-center text-text">Book a flight</h1>
+                <p class="text-lg text-center text-text">We can bring you anywhere!*</p>
+                <p class="mt-6 text-xs text-center text-text">*almost</p>
             </div>
             <!-- OUTER CONTAINER FOR FORM -->
-            <div class="container p-8 mx-auto h-auto flex items-center rounded-3xl drop-shadow-lg bg-white">
+            <div class="container flex items-center h-auto p-8 mx-auto bg-white rounded-3xl drop-shadow-lg">
                 <!-- FORM CONTRAINER -->
                 <div class="container mx-auto">
                     <form action="{% url 'search-results' %}" method="get" autocomplete="off">
@@ -19,14 +19,14 @@
                         <!-- INNER FORM CONTAINER -->
                         <div class="">
                             <!-- RADIO INPUT CONTAINER -->
-                            <div class="col-span-4 flex-auto mb-3">
+                            <div class="flex-auto col-span-4 mb-3">
                                 <fieldset class="flex gap-6">
                                     <div class="flex items-center gap-2">
                                         <input type="radio"
                                                name="trip_type"
                                                id="return_trip_radio"
                                                value="return"
-                                               class="text-primary focus:outline-primary focus:bg-primary border-gray-400 w-5 h-5"
+                                               class="w-5 h-5 border-gray-400 text-primary focus:outline-primary focus:bg-primary"
                                                checked>
                                         <label for="return_trip_radio" class="text-text">Return</label>
                                     </div>
@@ -35,39 +35,39 @@
                                                name="trip_type"
                                                id="oneway_trip_radio"
                                                value="oneway"
-                                               class="text-primary focus:outline-primary focus:bg-primary border-gray-400 w-5 h-5">
+                                               class="w-5 h-5 border-gray-400 text-primary focus:outline-primary focus:bg-primary">
                                         <label for="oneway_trip_radio" class="text-text">One-way</label>
                                     </div>
                                 </fieldset>
                             </div>
                             <div class="grid grid-cols-4 gap-3">
-                                <div class="col-span-full sm:col-span-2 relative airport-input-container over">
+                                <div class="relative col-span-full sm:col-span-2 airport-input-container over">
                                     <input type="text"
                                            name="origin"
                                            id="origin"
                                            placeholder="Origin"
                                            class="z-40 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm">
                                     <div id="airports-list-origin"
-                                         class="hidden absolute top-1/2 border-2 w-full p-4 pt-8 z-30 rounded-b-3xl bg-white drop-shadow-md h-72 overflow-hidden">
-                                        <div class="overflow-auto h-full">
+                                         class="absolute z-30 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
+                                        <div class="h-full overflow-auto">
                                             {% for airport in airports %}
-                                                <div class="text-text text-sm my-2 airport-list-item">{{ airport }}</div>
+                                                <div class="my-2 text-sm text-text airport-list-item">{{ airport }}</div>
                                                 <hr>
                                             {% endfor %}
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-span-full sm:col-span-2 relative">
+                                <div class="relative col-span-full sm:col-span-2">
                                     <input type="text"
                                            name="destination"
                                            id="destination"
                                            placeholder="Destination"
                                            class="z-20 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm">
                                     <div id="airports-list-destination"
-                                         class="hidden absolute top-1/2 border-2 w-full p-4 pt-8 z-10 rounded-b-3xl bg-white drop-shadow-md h-72 overflow-hidden">
-                                        <div class="overflow-auto h-full">
+                                         class="absolute z-10 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
+                                        <div class="h-full overflow-auto">
                                             {% for airport in airports %}
-                                                <div class="text-text text-sm my-2 airport-list-item">{{ airport }}</div>
+                                                <div class="my-2 text-sm text-text airport-list-item">{{ airport }}</div>
                                                 <hr>
                                             {% endfor %}
                                         </div>
@@ -97,7 +97,7 @@
                                 <input type="submit"
                                        name="submit"
                                        id=""
-                                       class="col-span-4 sm:col-span-2 md:col-span-1 bg-primary py-auto px-6 rounded-full h-12 flex items-center font-bold text-white text-center justify-center drop-shadow-sm">
+                                       class="flex items-center justify-center h-12 col-span-4 px-6 font-bold text-center text-white rounded-full sm:col-span-2 md:col-span-1 bg-primary py-auto drop-shadow-sm">
                             </div>
                         </div>
                     </form>
