--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -2,37 +2,37 @@
 {% load static %}
 {% block content %}
     <div class="">
-        <div class="container mx-auto px-5">
+        <div class="container px-5 mx-auto">
             <div>
                 <div class="mt-4">
-                    <h2 class="text-text text-sm sm:text-lg font-light">Select outbound flight</h2>
+                    <h2 class="text-sm font-light text-text sm:text-lg">Select outbound flight</h2>
                 </div>
                 <div class="mb-4">
-                    <h3 class="text-text text-sm sm:text-2xl font-bold">{{ origin }} - {{ destination }}</h3>
+                    <h3 class="text-sm font-bold text-text sm:text-2xl">{{ origin }} - {{ destination }}</h3>
                 </div>
-                {% comment %} <div class="w-full h-20 rounded-full border-2 border-gray-200 shadow-inner">
-                    <div class="text-center text-3xl">{{ outbound_date|date:'j M' }}</div>
-                    <div class="text-center text-3xl">€{{ lowest_price|floatformat:'0' }}</div>
+                {% comment %} <div class="w-full h-20 border-2 border-gray-200 rounded-full shadow-inner">
+                    <div class="text-3xl text-center">{{ outbound_date|date:'j M' }}</div>
+                    <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div>
                 </div> {% endcomment %}
-                <div class="w-full h-20 rounded-full border-2 border-gray-200 shadow-inner grid grid-cols-5 grid-rows-1 items-center">
+                <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
                     {% for date in slider_date_list %}
                         <div class="">
-                            <div class="text-center text-xl">{{ date|date:'j M' }}</div>
-                            {% comment %} <div class="text-center text-3xl">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
+                            <div class="text-xl text-center">{{ date|date:'j M' }}</div>
+                            {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
                         </div>
                     {% endfor %}
                 </div>
             </div>
             {% for flight in flight_results %}
-                <div class="bg-white drop-shadow-md w-full h-52 sm:h-36 border-2 border-primary sm:rounded-full flex sm:flex-row flex-col justify-between items-center sm:pl-8 md:pl-16 rounded-3xl overflow-clip my-6"
+                <div class="flex flex-col items-center justify-between w-full my-6 bg-white border-2 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip"
                      id="{{ flight.id }}">
                     <div class="flex items-center justify-between p-4">
                         <div>
-                            <div class="text-xs md:text-md font-semibold text-text">{{ flight.origin }}</div>
-                            <div class="text-xl md:text-4xl font-bold text-text">{{ flight.dep_time|time:'H:i' }}</div>
+                            <div class="text-xs font-semibold md:text-md text-text">{{ flight.origin }}</div>
+                            <div class="text-xl font-bold md:text-4xl text-text">{{ flight.dep_time|time:'H:i' }}</div>
                         </div>
                         <div class="mx-8">
-                            <div class="text-center font-light text-sm md:text-md text-text">[Duration]</div>
+                            <div class="text-sm font-light text-center md:text-md text-text">[Duration]</div>
                             <img src="{% static 'img/flight-duration-illo.svg' %}"
                                  alt=""
                                  width="227px"
@@ -40,17 +40,17 @@
                                  class="">
                         </div>
                         <div>
-                            <div class="text-xs md:text-md font-semibold text-text">{{ flight.destination }}</div>
-                            <div class="text-xl md:text-4xl font-bold text-text">{{ flight.arr_time|time:'H:i' }}</div>
+                            <div class="text-xs font-semibold md:text-md text-text">{{ flight.destination }}</div>
+                            <div class="text-xl font-bold md:text-4xl text-text">{{ flight.arr_time|time:'H:i' }}</div>
                         </div>
                     </div>
                     {% comment %} <div>{{ flight.outbound_date }}</div> {% endcomment %}
-                    <div class="text-sm text-center pb-4 sm:pb-0 sm:pr-4 text-text">
+                    <div class="pb-4 text-sm text-center sm:pb-0 sm:pr-4 text-text">
                         Flight no.
                         <br class="hidden sm:block">
                         {{ flight.flight_number }}
                     </div>
-                    <div class="sm:aspect-square sm:w-auto w-full sm:border-2 border-white h-full bg-primary text-white sm:rounded-full flex items-center justify-center text-3xl font-bold">
+                    <div class="flex items-center justify-center w-full h-full text-3xl font-bold text-white border-white sm:aspect-square sm:w-auto sm:border-2 bg-primary sm:rounded-full">
                         €{{ flight.price }} <small class="font-normal">pp</small>
                     </div>
                 </div>
