--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,15 +1,15 @@
 {% extends 'base/base.html' %}
 {% block content %}
-    <div class="bg-gray-100 w-screen m-auto mx-auto flex items-center">
-        <div class="container mx-auto flex justify-center px-5">
-            <div class="flex flex-col justify-center w-full mx-auto container p-6 sm:p-12 rounded-3xl drop-shadow-lg bg-white max-w-xl">
+    <div class="flex items-center w-screen m-auto mx-auto bg-gray-100">
+        <div class="container flex justify-center px-5 mx-auto">
+            <div class="container flex flex-col justify-center w-full max-w-xl p-6 mx-auto bg-white sm:p-12 rounded-3xl drop-shadow-lg">
                 <!-- LOGIN HEADER -->
-                <h3 class="mx-auto text-primary text-3xl font-bold  mb-6">Login</h3>
+                <h3 class="mx-auto mb-6 text-3xl font-bold text-primary">Login</h3>
                 <!-- FORM -->
-                <form method='post' class="flex justify-center mx-auto w-full">
+                <form method='post' class="flex justify-center w-full mx-auto">
                     {% csrf_token %}
                     <!-- FORM FIELDS CONTAINER -->
-                    <div class="flex flex-col w-full sm:w-3/4 gap-4">
+                    <div class="flex flex-col w-full gap-4 sm:w-3/4">
                         <!-- EMAIL FIELD -->
                         <div class="flex flex-col">
                             {% comment %} <label for="id_email" class="">Email</label> {% endcomment %}
@@ -33,7 +33,7 @@
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <button type="submit"
-                                class="bg-primary py-auto px-6 rounded-full h-12 flex items-center font-bold text-white text-center justify-center">
+                                class="flex items-center justify-center h-12 px-6 font-bold text-center text-white rounded-full bg-primary py-auto">
                             Login
                         </button>
                     </div>
