--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -1,9 +1,23 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block content %}
+    <!-- HIDDEN FORM FOR ALT DATE SELECTION -->
+    <form id="alt-date-select-form"
+          action="{% url 'search-results' %}"
+          method="get">
+        <input type="hidden" name="trip_type" value="{{ trip_type }}">
+        <input type="hidden" name="origin" value="{{ origin }}">
+        <input type="hidden" name="destination" value="{{ destination }}">
+        <input type="hidden"
+               name="outbound_date"
+               value="{{ outbound_date }}"
+               id="alt-date-input">
+        <input type="hidden" name="return_date" value="{{ return_date }}">
+    </form>
     <div class="">
         <div class="container px-5 mx-auto">
             <div>
+                <!-- PAGE HEADER -->
                 <div class="mt-4">
                     <h2 class="text-sm font-light text-text sm:text-lg">Select outbound flight</h2>
                 </div>
@@ -14,15 +28,17 @@
                     <div class="text-3xl text-center">{{ outbound_date|date:'j M' }}</div>
                     <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div>
                 </div> {% endcomment %}
+                <!-- ALT DATE SELECTOR -->
                 <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
                     {% for date in slider_date_list %}
                         <div class="">
-                            <div class="text-xl text-center">{{ date|date:'j M' }}</div>
+                            <div class="text-xl text-center altDate" id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
                             {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
                         </div>
                     {% endfor %}
                 </div>
             </div>
+            <!-- SHOW AVAILABLE FLIGHTS -->
             {% for flight in flight_results %}
                 <div class="flex flex-col items-center justify-between w-full my-6 bg-white border-2 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip"
                      id="{{ flight.id }}">
@@ -58,3 +74,6 @@
         </div>
     </div>
 {% endblock content %}
+{% block scripts %}
+    <script src="{% static 'js/alt-date-select.js' %}"></script>
+{% endblock scripts %}
