--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -31,10 +31,17 @@
                 <!-- ALT DATE SELECTOR -->
                 <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
                     {% for date in slider_date_list %}
-                        <div class="">
-                            <div class="text-xl text-center altDate" id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
-                            {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
-                        </div>
+                        {% if date|date:'Y-m-d' == outbound_date|date:'Y-m-d' %}
+                            <div class="flex items-center justify-center h-full bg-white rounded-full shadow-md">
+                                <div class="text-2xl font-bold text-center altDate" id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
+                                {% comment %} <div class="text-xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
+                            </div>
+                        {% else %}
+                            <div class="">
+                                <div class="text-xl text-center altDate" id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
+                                {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
+                            </div>
+                        {% endif %}
                     {% endfor %}
                 </div>
             </div>
