--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -10,16 +10,17 @@
         <input type="hidden" name="destination" value="{{ destination }}">
         <input type="hidden"
                name="outbound_date"
-               value="{{ outbound_date }}"
-               id="alt-date-input">
-        <input type="hidden" name="return_date" value="{{ return_date }}">
+               value="{{ outbound_date|date:'Y-m-d' }}"
+               id="alt-date-input-outbound">
+        <input type="hidden" name="return_date" value="{{ return_date|date:'Y-m-d' }}" id="alt-date-input-return">
+        >
     </form>
     <div class="">
         <div class="container px-5 mx-auto">
             <div>
                 <!-- PAGE HEADER -->
                 <div class="mt-4">
-                    <h2 class="text-sm font-light text-text sm:text-lg">Select outbound flight</h2>
+                    <h2 class="text-sm font-light text-text sm:text-lg">Select <strong class="font-semibold text-primary">outbound</strong> flight</h2>
                 </div>
                 <div class="mb-4">
                     <h3 class="text-sm font-bold text-text sm:text-2xl">{{ origin }} - {{ destination }}</h3>
@@ -47,6 +48,69 @@
             </div>
             <!-- SHOW AVAILABLE FLIGHTS -->
             {% for flight in flight_results %}
+                <div class="flex flex-col items-center justify-between w-full my-6 bg-white border-2 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip"
+                     id="{{ flight.id }}">
+                    <div class="flex items-center justify-between p-4">
+                        <div>
+                            <div class="text-xs font-semibold md:text-md text-text">{{ flight.origin }}</div>
+                            <div class="text-xl font-bold md:text-4xl text-text">{{ flight.dep_time|time:'H:i' }}</div>
+                        </div>
+                        <div class="mx-8">
+                            <div class="text-sm font-light text-center md:text-md text-text">[Duration]</div>
+                            <img src="{% static 'img/flight-duration-illo.svg' %}"
+                                 alt=""
+                                 width="227px"
+                                 height="27px"
+                                 class="">
+                        </div>
+                        <div>
+                            <div class="text-xs font-semibold md:text-md text-text">{{ flight.destination }}</div>
+                            <div class="text-xl font-bold md:text-4xl text-text">{{ flight.arr_time|time:'H:i' }}</div>
+                        </div>
+                    </div>
+                    {% comment %} <div>{{ flight.outbound_date }}</div> {% endcomment %}
+                    <div class="pb-4 text-sm text-center sm:pb-0 sm:pr-4 text-text">
+                        Flight no.
+                        <br class="hidden sm:block">
+                        {{ flight.flight_number }}
+                    </div>
+                    <div class="flex items-center justify-center w-full h-full text-3xl font-bold text-white border-white sm:aspect-square sm:w-auto sm:border-2 bg-primary sm:rounded-full">
+                        €{{ flight.price }} <small class="font-normal">pp</small>
+                    </div>
+                </div>
+            {% endfor %}
+
+            
+            <!---------------------------->
+            <!-- RETURN FLIGHTS RESULTS -->
+            <!---------------------------->
+            <hr class="my-12">
+            
+            <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
+                {% for date in slider_date_list_return %}
+                    {% if date|date:'Y-m-d' == return_date|date:'Y-m-d' %}
+                        <div class="flex items-center justify-center h-full bg-white rounded-full shadow-md">
+                            <div class="text-2xl font-bold text-center altDateReturn" id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
+                            {% comment %} <div class="text-xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
+                        </div>
+                    {% else %}
+                        <div class="">
+                            <div class="text-xl text-center altDateReturn" id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
+                            {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+
+            <!-- PAGE HEADER -->
+            <div class="mt-4">
+                <h2 class="text-sm font-light text-text sm:text-lg">Select <strong class="font-semibold text-primary">return</strong> flight</h2>
+            </div>
+            <div class="mb-4">
+                <h3 class="text-sm font-bold text-text sm:text-2xl">{{ destination }} - {{ origin }}</h3>
+            </div>
+            
+            {% for flight in flight_results_return %}
                 <div class="flex flex-col items-center justify-between w-full my-6 bg-white border-2 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip"
                      id="{{ flight.id }}">
                     <div class="flex items-center justify-between p-4">
