--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -143,6 +143,8 @@
         <script src="{% static 'js/base.js' %}"></script>
         <!-- FLOWBITE CSS FRAMEWORK -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
+        <!-- HTMX -->
+        <script src="https://unpkg.com/htmx.org@1.9.3" integrity="sha384-lVb3Rd/Ca0AxaoZg5sACe8FJKF0tnUgR2Kd7ehUOG5GCcROv5uBIZsOqovBAcWua" crossorigin="anonymous"></script>
         {% block scripts %}
         {% endblock scripts %}
     </body>
