--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -2,21 +2,6 @@
 {% load static %}
 {% block content %}
     <!-- HIDDEN FORM FOR ALT DATE SELECTION -->
-    <form id="alt-date-select-form"
-          action="{% url 'search-results' %}"
-          method="get">
-        <input type="hidden" name="trip_type" value="{{ trip_type }}">
-        <input type="hidden" name="origin" value="{{ origin }}">
-        <input type="hidden" name="destination" value="{{ destination }}">
-        <input type="hidden"
-               name="outbound_date"
-               value="{{ outbound_date|date:'Y-m-d' }}"
-               id="alt-date-input-outbound">
-        <input type="hidden"
-               name="return_date"
-               value="{{ return_date|date:'Y-m-d' }}"
-               id="alt-date-input-return">
-    </form>
     <div class="">
         <div class="container px-5 mx-auto">
             <div>
@@ -33,55 +18,13 @@
                     <div class="text-3xl text-center">{{ outbound_date|date:'j M' }}</div>
                     <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div>
                 </div> {% endcomment %}
-                <!-- ALT DATE SELECTOR -->
-                <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
-                    {% for date in slider_date_list %}
-                        {% if date|date:'Y-m-d' == outbound_date|date:'Y-m-d' %}
-                            <div class="flex items-center justify-center h-full bg-white rounded-full shadow-md">
-                                <div class="text-2xl font-bold text-center altDate"
-                                     id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
-                                {% comment %} <div class="text-xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
-                            </div>
-                        {% else %}
-                            <div class=""
-                                 hx-trigger="click"
-                                 hx-get="alt_dates/?date={{ date|date:'Y-m-d' }}&origin={{origin}}&destination={{destination}}"
-                                 hx-target="#outbound-flights">
-                                <div class="text-xl text-center altDate" id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
-                                {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                </div>
             </div>
             <!-- SHOW AVAILABLE FLIGHTS -->
-            <div id="outbound-flights">
-                {% include 'partials/flights.html' %}
-            </div>
+            {% include 'partials/flights.html' with date=outbound_date leg='outbound' %}
             <!---------------------------->
             <!-- RETURN FLIGHTS RESULTS -->
             <!---------------------------->
             <hr class="my-12">
-            <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
-                {% for date in slider_date_list_return %}
-                    {% if date|date:'Y-m-d' == return_date|date:'Y-m-d' %}
-                        <div class="flex items-center justify-center h-full bg-white rounded-full shadow-md">
-                            <div class="text-2xl font-bold text-center altDateReturn"
-                                 id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
-                            {% comment %} <div class="text-xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
-                        </div>
-                    {% else %}
-                        <div class=""
-                             hx-trigger="click"
-                             hx-get="alt_dates/?date={{ date|date:'Y-m-d' }}&origin={{destination}}&destination={{origin}}"
-                             hx-target="#return-flights">
-                            <div class="text-xl text-center altDateReturn"
-                                 id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
-                            {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
             <!-- PAGE HEADER -->
             <div class="mt-4">
                 <h2 class="text-sm font-light text-text sm:text-lg">
@@ -91,9 +34,7 @@
             <div class="mb-4">
                 <h3 class="text-sm font-bold text-text sm:text-2xl">{{ destination }} - {{ origin }}</h3>
             </div>
-            <div id="return-flights">
-                {% include 'partials/flights.html' with flight_results=flight_results_return %}
-            </div>
+            {% include 'partials/flights.html' with date=return_date slider_date_list=slider_date_list_return flight_results=flight_results_return leg='return' origin=destination destination=origin %}
             <form id="selected-flights" action="" method="get">
                 <input type="hidden" name="selected-outbound-flight" value="">
                 <input type="hidden" name="selected-return-flight" value="">
@@ -106,5 +47,8 @@
     </div>
 {% endblock content %}
 {% block scripts %}
-    {% comment %} <script src="{% static 'js/alt-date-select.js' %}"></script> {% endcomment %}
+    <script src="{% static 'js/alt-date-select.js' %}"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.3"
+            integrity="sha384-lVb3Rd/Ca0AxaoZg5sACe8FJKF0tnUgR2Kd7ehUOG5GCcROv5uBIZsOqovBAcWua"
+            crossorigin="anonymous"></script>
 {% endblock scripts %}
