--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -1,37 +1,59 @@
 {% load static %}
-{% for flight in flight_results %}
-
-<!-- SHOW AVAILABLE FLIGHTS -->
-    <div data-selected-outbound="False"
-         data-flight-leg="outbound"
-         class="flex flex-col items-center justify-between w-full my-6 bg-white border-2 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip"
-         id="{{ flight.flight_number }}">
-        <div class="flex items-center justify-between p-4">
-            <div>
-                <div class="text-xs font-semibold md:text-md text-text">{{ flight.origin }}</div>
-                <div class="text-xl font-bold md:text-4xl text-text">{{ flight.dep_time|time:'H:i' }}</div>
-            </div>
-            <div class="mx-8">
-                <div class="text-sm font-light text-center md:text-md text-text">[Duration]</div>
-                <img src="{% static 'img/flight-duration-illo.svg' %}"
-                     alt=""
-                     width="227px"
-                     height="27px"
-                     class="">
-            </div>
-            <div>
-                <div class="text-xs font-semibold md:text-md text-text">{{ flight.destination }}</div>
-                <div class="text-xl font-bold md:text-4xl text-text">{{ flight.arr_time|time:'H:i' }}</div>
-            </div>
-        </div>
-        {% comment %} <div>{{ flight.outbound_date }}</div> {% endcomment %}
-        <div class="pb-4 text-sm text-center sm:pb-0 sm:pr-4 text-text">
-            Flight no.
-            <br class="hidden sm:block">
-            {{ flight.flight_number }}
-        </div>
-        <div class="flex items-center justify-center w-full h-full text-3xl font-bold text-white border-white sm:aspect-square sm:w-auto sm:border-2 bg-primary sm:rounded-full">
-            €{{ flight.price }} <small class="font-normal">pp</small>
-        </div>
+<div id="{{ leg }}-flights" data-leg="{{ leg }}">
+    <!-- ALT DATE SELECTOR -->
+    <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
+        {% for dateitem in slider_date_list %}
+            {% if dateitem == date %}
+                <div class="flex items-center justify-center h-full bg-white rounded-full shadow-md">
+                    <div class="text-2xl font-bold text-center altDate"
+                         id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
+                    {% comment %} <div class="text-xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
+                </div>
+            {% else %}
+                <div class=""
+                     hx-trigger="click"
+                     hx-get="alt_dates/?date={{ dateitem|date:'Y-m-d' }}&origin={{ origin }}&destination={{ destination }}&leg={{ leg }}"
+                     hx-swap="outerHTML"
+                     hx-target="#{{ leg }}-flights">
+                    <div class="text-xl text-center altDate" id="{{ dateitem|date:'Y-m-d' }}">{{ dateitem|date:'j M' }}</div>
+                    {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
+                </div>
+            {% endif %}
+        {% endfor %}
     </div>
-    {% endfor %}
+    {% comment %} {% for dateitem in slider_date_list %}<div>{{dateitem}}</div>{% endfor %} <div>DATE: {{date}}</div> {% endcomment %}
+    <div id="">
+        {% for flight in flight_results %}
+            <!-- SHOW AVAILABLE FLIGHTS -->
+            <div data-selected-{{ leg }}="False" data-flight-leg="{{ leg }}" class="flex flex-col items-center justify-between w-full my-6 bg-white border-2 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip" id="{{ flight.flight_number }}">
+                <div class="flex items-center justify-between p-4">
+                    <div>
+                        <div class="text-xs font-semibold md:text-md text-text">{{ flight.origin }}</div>
+                        <div class="text-xl font-bold md:text-4xl text-text">{{ flight.dep_time|time:'H:i' }}</div>
+                    </div>
+                    <div class="mx-8">
+                        <div class="text-sm font-light text-center md:text-md text-text">[Duration]</div>
+                        <img src="{% static 'img/flight-duration-illo.svg' %}"
+                             alt=""
+                             width="227px"
+                             height="27px"
+                             class="">
+                    </div>
+                    <div>
+                        <div class="text-xs font-semibold md:text-md text-text">{{ flight.destination }}</div>
+                        <div class="text-xl font-bold md:text-4xl text-text">{{ flight.arr_time|time:'H:i' }}</div>
+                    </div>
+                </div>
+                {% comment %} <div>{{ flight.outbound_date }}</div> {% endcomment %}
+                <div class="pb-4 text-sm text-center sm:pb-0 sm:pr-4 text-text">
+                    Flight no.
+                    <br class="hidden sm:block">
+                    {{ flight.flight_number }}
+                </div>
+                <div class="flex items-center justify-center w-full h-full text-3xl font-bold text-white border-white sm:aspect-square sm:w-auto sm:border-2 bg-primary sm:rounded-full">
+                    €{{ flight.price }} <small class="font-normal">pp</small>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</div>
