milestone: flight selection page fully functional

--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -39,9 +39,9 @@
                 <input type="hidden" name="selected-outbound-flight" value="">
                 <input type="hidden" name="selected-return-flight" value="">
             </form>
-            <div class="flex justify-end">
+            <div class="flex justify-end my-8">
                 <button id="confirm-flights-button"
-                        class="p-4 mb-8 font-bold text-white rounded-full bg-primary">Review flights</button>
+                        class="px-6 py-4 font-bold text-white rounded-full bg-primary">Add passenger details</button>
             </div>
         </div>
     </div>
