feat: add validation to next page CTA

--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -41,7 +41,7 @@
             </form>
             <div class="flex justify-end my-8">
                 <button id="confirm-flights-button"
-                        class="px-6 py-4 font-bold text-white rounded-full bg-primary">Add passenger details</button>
+                        class="px-6 py-4 font-bold text-white rounded-full bg-primary disabled:bg-gray-500" disabled>Add passenger details</button>
             </div>
         </div>
     </div>
