feat: implement passengers and checkout pages

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -89,11 +89,24 @@
                                        placeholder="Return Date"
                                        data-id="datetime"
                                        readonly="readonly">
-                                <input type="text"
-                                       name="passengers"
-                                       id=""
-                                       placeholder="Passengers"
-                                       class="col-span-4 sm:col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm">
+                                {% comment %} <input type="text"
+        name="passengers"
+        id=""
+        placeholder="Passengers"
+        class="col-span-4 sm:col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"> {% endcomment %}
+                                <select name="passengers"
+                                        id=""
+                                        class="col-span-4 sm:col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm">
+                                    <option value="" selected disabled>Passengers</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                </select>
                                 <input type="submit"
                                        name="submit"
                                        id=""
